--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 
-<body id="top" class="dark">
+<body id="top">
   <div id="app" class="container"></div>
+  <script>
+    if (window.matchMedia &&
+      window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      document.body.classList.add('dark');
+    }
+  </script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
